@@ -94,7 +94,7 @@
                                 <bool>false</bool>
                             </property>
                             <property name="default">
-                                <bool>false</bool>
+                                <bool>true</bool>
                             </property>
                         </widget>
                         <spacer>
